[project]
name = "subway-surfers-reinforcement-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "mss>=10.2.0",
    "opencv-python>=4.13.0.92",
    "pyautogui>=0.9.54",
    "torch>=2.12.1",
]
